speed up aggressive rename?